<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/ownerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ownerImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@mipmap/ic_launcher" />

            <RelativeLayout
                android:id="@+id/repoInfoRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/ownerImage">

                <TextView
                    android:id="@+id/ownerNameDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ownerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/ownerNameDesc"
                    android:ellipsize="end"
                    android:maxLines="1" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/typeInfoRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repoInfoRelativeLayout"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/ownerImage">

                <TextView
                    android:id="@+id/ownerTypeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ownerTypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/ownerTypeDesc"
                    android:ellipsize="end"
                    android:maxLines="1" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ownerCard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fullNameDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/full_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fullNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullNameDescTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/descTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullNameTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/languageDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/language"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/languageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/languageDescTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/createDateDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/languageTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/created"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createDateDescTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/updateDateDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createDateTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/updated"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/updateDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updateDateDescTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pushedDateDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updateDateTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/pushed"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pushedDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pushedDateDescTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/watchersDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pushedDateTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/watchers"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/watchersTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/watchersDescTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forksDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/watchersTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/forks"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forksTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forksDescTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/issuesDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forksTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/issues"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/issuesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/issuesDescTxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>