<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/userDetailProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorPrimary" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/userDetailsSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/userDetailsNestedScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ownerImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="16dp"
                    android:layout_centerHorizontal="true"
                    />

                <TextView
                    android:id="@+id/fullNameDescTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/full_name"
                    android:textStyle="bold"
                    android:layout_below="@+id/ownerImage"
                    android:layout_marginTop="16dp"
                    />

                <TextView
                    android:id="@+id/fullNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullNameDescTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/compTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullNameTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/company"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/companyTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/compTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/typeDescTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/companyTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/type"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/typeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/typeDescTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/emailDescTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/typeTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emailDescTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/publicDateDescTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emailTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/public_repositories_count"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/publicRepoTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/publicDateDescTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/followersDescTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/publicRepoTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/followers"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followersTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/followersDescTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/createdDescTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/followersTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/created"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/createdTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createdDescTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/updatedDescTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createdTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/updated"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/updateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/updatedDescTxt"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>